# yane

./: .gitignore  Cargo.toml  README.MD  license.txt
.github/workflows/: rust.yml
examples/1-builtin/: README.MD  main.rs
examples/1-minimal/: main.rs
examples/2-explicit/: README.MD  main.rs
examples/2-sdl/: main.rs
examples/3-television/: README.MD  main.rs  open_gl.rs  utils.rs
examples/3-television/assets/: credit.txt
examples/3-television/shaders/: frag.glsl  vertex.glsl
examples/4-ines-to-exe/: README.md  license.txt  main.rs  thwaite.nes
roms/: sprites.nes  zelda.bin_savedata  zelda.srm
src/: app_settings.rs  apu.rs  audio.rs  cartridge.rs  cpu.rs  debug_window.rs  fragment_shader.frag  geometry_shader.geom  gui.rs  lib.rs  main.rs  nes.rs  opcodes.rs  ppu.rs  run_app.rs  screen.rs  settings.rs  status_register.rs  utils.rs  vertex_shader.vert  window.rs
src/app/: audio.rs  config.rs  debug_window.rs  default_keys.md  input.rs  key_map.rs  mod.rs  screen.rs  utils.rs  window.rs
src/core/: controller.rs  cpu.rs  mod.rs  nes.rs  opcodes.rs  ppu.rs  settings.rs  status_register.rs
src/core/apu/: apu.rs  dmc.rs  envelope.rs  length_counter.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
src/core/cartridge/: cartridge.rs  mapper.rs  mod.rs
src/core/cartridge/mappers/: axrom.rs  cnrom.rs  mod.rs  nrom.rs  pxrom.rs  sxrom.rs  txrom.rs  uxrom.rs
src/emulation/: apu.rs  controller.rs  cpu.rs  mod.rs  nes.rs  opcodes.rs  ppu.rs  settings.rs  status_register.rs
src/emulation/apu/: apu.rs  dmc.rs  envelope.rs  length_counter.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
src/emulation/cartridge/: cartridge.rs  mapper.rs  mod.rs
src/emulation/cartridge/mappers/: cnrom.rs  mod.rs  nrom.rs  pxrom.rs  scrom.rs  sxrom.rs  txrom.rs  uxrom.rs
src/interface/: audio.rs  debug_window.rs  key_map.rs  mod.rs  screen.rs  utils.rs  window.rs
src/shaders/: background.geom  background.vert  chr.vert  chr_rom_debug.geom  color.frag  fragment_shader.frag  geometry_shader.geom  oam.geom  pass_through.vert  quad_shader.frag  quad_shader.vert  scanline.vert  tile.frag  tile.vert  tiles.vert  vertex_shader.vert  wireframe.vert
tests/: cpu.rs  mmc3.rs  nes.rs  nestest.rs  ppu.rs  sprite_0_hit.rs
tests/common/: mod.rs
tests/snapshots/: cpu__branch.snap  cpu__dummy_writes_ppumem.snap  cpu__nestest_official.snap  cpu__nestest_unofficial.snap  cpu__official.snap  mmc3__a12_clocking.snap  mmc3__clocking.snap  mmc3__details.snap  nestest__official_opcodes.snap  nestest__unofficial_opcodes.snap  ppu__oam_ram.snap  ppu__oam_read.snap  ppu__open_bus.snap  ppu__palette_ram.snap  ppu__spr_overflow.snap  ppu__spr_overflow_details.snap  ppu__vbl_timing.snap  ppu__vblank_access.snap.new  ppu__vram_access.snap  sprite_0_hit__8x16.snap  sprite_0_hit__alignment.snap  sprite_0_hit__basic.snap  sprite_0_hit__bottom.snap  sprite_0_hit__clip.snap  sprite_0_hit__corners.snap  sprite_0_hit__flip.snap  sprite_0_hit__right_edge.snap
