[package]
name = "yane"
version = "0.2.0"
edition = "2021"
readme = "README.MD"
repository = "https://github.com/josefwaller/yane"
authors = ["Josef Waller josef@josefwaller.com"]
description = "An N.E.S. emulator and emulation library."
documentation = "https://docs.rs/yane"
license = "MIT"
keywords = [
    "nes",
    "n.e.s",
    "nintendo",
    "nintendo entertainment system",
    "emulator",
]
categories = ["emulators", "command-line-interface"]
exclude = [".github"]

[dependencies]
anstyle = "1.0.10"
assert_hex = "0.4.1"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive", "string"] }
copypasta = "0.10.1"
dirs = "6.0.0"
glow = "0.14.1"
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
imgui-sdl2-support = "0.13.0"
log = "0.4.22"
postcard = { version = "1.1.1", features = ["alloc"] }
rand = "0.8.5"
regex = "1.11.1"
rubato = "0.16.1"
sdl2 = "0.37.0"
serde = "1.0.217"
serde-big-array = "0.5.1"
serde_yaml = "0.9.34"
simplelog = "0.12.2"
test-case = "3.3.1"
typetag = "0.2.19"
wavers = "1.5.1"

[dev-dependencies]
insta = "1.41.1"
