[package]
name = "yane"
version = "1.1.4"
edition = "2021"
readme = "README.MD"
repository = "https://github.com/josefwaller/yane"
authors = ["Josef Waller josef@josefwaller.com"]
description = "An N.E.S. emulator and emulation library."
documentation = "https://docs.rs/yane"
license = "MIT"
keywords = ["nes", "nintendo", "emulator"]
categories = ["emulators"]
exclude = [".github", "!yane.bmp"]

[dependencies]
anstyle = { version = "1.0.10", optional = true }
chrono = { version = "0.4.39", optional = true }
clap = { version = "4.5.27", features = ["derive", "string"], optional = true }
copypasta = { version = "0.10.1", optional = true }
dirs = { version = "6.0.0", optional = true }
glow = { version = "0.14.1", optional = true }
imgui = { version = "0.12.0", optional = true }
imgui-glow-renderer = { version = "0.13.0", optional = true }
imgui-sdl2-support = { version = "0.13.0", optional = true }
log = "0.4.22"
postcard = { version = "1.1.1", features = ["alloc"] }
rand = "0.8.5"
regex = { version = "1.11.1", optional = true }
rubato = { version = "0.16.1", optional = true }
sdl2 = { version = "0.37.0", optional = true }
serde = "1.0.217"
serde-big-array = "0.5.1"
serde_yaml = { version = "0.9.34", optional = true }
simplelog = "0.12.2"
typetag = "0.2.19"
wavers = { version = "1.5.1", optional = true }

[dev-dependencies]
insta = "1.41.1"
assert_hex = "0.4.1"
test-case = "3.3.1"
# Included for examples that use SDL, usually SDL is hidden behind the sdl flag
sdl2 = "0.37.0"
image = "0.25.5"

[features]
default = ["sdl"]
sdl = [
    "dep:sdl2",
    "dep:glow",
    "dep:clap",
    "dep:chrono",
    "dep:anstyle",
    "dep:copypasta",
    "dep:dirs",
    "dep:imgui",
    "dep:imgui-glow-renderer",
    "dep:imgui-sdl2-support",
    "dep:regex",
    "dep:rubato",
    "dep:serde_yaml",
    "dep:wavers",
]

[profile.dev]
opt-level = 1
